<resources>
    <string name="app_name">MeLeva</string>

    <string name="action_settings">Settings</string>
    <string name="head_cadastro">Cadastre-se</string>
    <string name="complet_name">Nome completo</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="confirm_password">Comfirmar senha</string>
    <string name="button_create_account">Criar conta</string>
    <string name="panel_top">Painel do topo</string>

    <string name="title_activity_login">Entrar</string>
    <string name="button_entrar">Entrar</string>
    <string name="textView_cadastrar">Cadastre-se</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="cargo">Cargo:</string>
    <string name="escolher_cargo">Escolha Seu Cargo</string>
    <string-array name="cargo">
        <item>Selecione seu cargo</item>
        <item>Autorizador</item>
        <item>Motorista</item>
        <item>Solicitante</item>
        <item>Transportador</item>
    </string-array>

    <string name="title_activity_home">Home</string>
    <string name="title_activity_item_list_view">itemListView</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_item_lista">itemLista</string>
    <string name="title_activity_viagem">ViagemActivity</string>

    <string name="head_cadastrar_viagem">Cadastrar viagem:</string>
    <string name="viagem_titulo">Título</string>
    <string name="head_data_partida">Data de partida</string>
    <string name="head_data_chegada">Data de chegada</string>
    <string name="data">dd/mm/aaaa</string>
    <string name="hora">hh:mm</string>
    <string name="origem">Origem</string>
    <string name="destino">Destino</string>
    <string name="qtde_pessoas">Quantidade de pessoas</string>
    <string name="custo_orcado">Custo Orcado</string>
    <string name="custo_real">Custo Real</string>
    <string name="button_create_viagem">Criar</string>
    <string name="ok">Ok</string>
    <string name="button_ok">Ok</string>
    <string name="button_aceitar">Aceitar</string>
    <string name="button_rejeitar">Rejeitar</string>
    <string name="button_iniciar_viagem">Iniciar Viagem</string>
    <string name="button_terminar_viagem">Terminar Viagem</string>
    <string name="button_enviar">Enviar</string>

    <string name="motorista">Motorista:</string>
    <string name="escolher_motorista">Selecionar Motorista</string>
    <string-array name="motoristas">
        <item>Selecione o motorista</item>
        <item>Godolfredo</item>
        <item>Cleuza</item>
        <item>Florentina</item>
        <item>Zé</item>
    </string-array>

</resources>
