<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CadastroActivity">

     <TextView
        android:id="@+id/headText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/head_cadastro"
        android:textAppearance="@style/comforttaFont"
        />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headText"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/complet_name"
        android:textAppearance="@style/comforttaFont"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputNome"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/email"
        android:textAppearance="@style/comforttaFont"/>

    <LinearLayout
        android:id="@+id/linerLayoutCargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_below="@+id/inputEmail">

        <TextView
            android:id="@+id/textViewCargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/cargo"
            android:textAppearance="@style/comforttaFont"/>

        <Spinner
            android:id="@+id/spinnerCargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/escolher_cargo"
            android:textAppearance="@style/comforttaFont"/>

    </LinearLayout>

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linerLayoutCargo"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:password="true"
        android:textAppearance="@style/comforttaFont"/>

    <EditText
        android:id="@+id/inputConfSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/inputSenha"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:password="true"
        android:textAppearance="@style/comforttaFont"/>

    <Button
        android:id="@+id/buttonCadastre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_create_account"
        android:textAppearance="@style/comforttaFont"
        android:background="@color/blue_default"/>

</RelativeLayout>
