<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ViagemActivity">

    <TextView
        android:id="@+id/headText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/head_cadastrar_viagem"
        android:textAppearance="@style/comforttaFont"/>

    <EditText
        android:id="@+id/inputTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headText"
        android:hint="@string/viagem_titulo"
        android:layout_marginTop="3dp"
        android:textAppearance="@style/comforttaFont"/>

    <RelativeLayout
        android:id="@+id/layoutDatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/inputTitulo">

        <RelativeLayout
            android:id="@+id/layoutDataPartidaAgrupador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/headDataPartida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/head_data_partida"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/comforttaFont"/>

            <LinearLayout
                android:id="@+id/layoutDataPartida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/headDataPartida">

                <EditText
                    android:id="@+id/dataPartida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/data"
                    android:inputType="date"
                    android:textAppearance="@style/comforttaFont"/>
                <EditText
                    android:id="@+id/horaPartida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora"
                    android:inputType="datetime"
                    android:textAppearance="@style/comforttaFont"/>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutDataChegadaAgrupador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_toRightOf="@+id/layoutDataPartidaAgrupador"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/headDataChegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_data_chegada"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/comforttaFont"/>

            <LinearLayout
                android:id="@+id/layoutDataChegada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/headDataChegada">

                <EditText
                    android:id="@+id/dataChegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/data"
                    android:inputType="date"
                    android:textAppearance="@style/comforttaFont"/>
                <EditText
                    android:id="@+id/horaChegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hora"
                    android:inputType="datetime"
                    android:textAppearance="@style/comforttaFont"/>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/origem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/origem"
        android:layout_below="@+id/layoutDatas"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/comforttaFont"/>

    <EditText
        android:id="@+id/destino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destino"
        android:layout_below="@+id/origem"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/comforttaFont"/>

    <LinearLayout
        android:id="@+id/layoutQtde"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/destino"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/HeadqtdePessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qtde_pessoas"
            android:textAppearance="@style/comforttaFont"/>

        <EditText
            android:id="@+id/qtdePessoas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/comforttaFont"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCustoOrcado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutQtde"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/HeadCustoOrcado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custo_orcado"
            android:textAppearance="@style/comforttaFont"/>

        <EditText
            android:id="@+id/custoOrcado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/comforttaFont"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCustoReal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layoutCustoOrcado"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/HeadCustoReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custo_real"
            android:textAppearance="@style/comforttaFont"/>

        <EditText
            android:id="@+id/custoReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textAppearance="@style/comforttaFont"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutSelecionarMotorista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutCustoReal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textSelecionarMotorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/motorista"
            android:textAppearance="@style/comforttaFont"/>

        <Spinner
            android:id="@+id/spinnerMotorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/escolher_motorista"
            android:textAppearance="@style/comforttaFont"
            android:layout_toRightOf="@+id/textSelecionarMotorista"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonCriar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_viagem"
        android:background="@color/blue_default"
        android:onClick="criar"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/comforttaFont"/>

    <LinearLayout
        android:id="@+id/layoutBotoesAutorizadr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/aceitar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_aceitar"
            android:layout_gravity="left"
            android:background="@color/blue_default"
            android:onClick="aceitar"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/comforttaFont"
            />

        <Button
            android:id="@+id/rejeitar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_rejeitar"
            android:background="@color/blue_default"
            android:onClick="rejeitar"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/comforttaFont"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBotoesMotorista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/iniciar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_iniciar_viagem"
            android:layout_gravity="left"
            android:background="@color/blue_default"
            android:onClick="iniciarViagem"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/comforttaFont"/>

        <Button
            android:id="@+id/terminar"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_terminar_viagem"
            android:background="@color/blue_default"
            android:layout_gravity="right"
            android:onClick="terminarViagem"
            android:layout_marginLeft="10dp"
            android:textAppearance="@style/comforttaFont"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonEnviarTransportador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_enviar"
        android:layout_alignParentBottom="true"
        android:background="@color/blue_default"
        android:textColor="@color/White_default"
        android:onClick="enviarTransportador"
        android:gravity="center_horizontal"
        android:textAppearance="@style/comforttaFont"/>

</RelativeLayout>
